fix(logs): manage field nullity during log search https://gravitee.atlassian.net/browse/APIM-2796
(cherry picked from commit 99040d37f13e09e3da4ed450ff8aaacdefd6d691)